--- a/LogisticsApps/LogisticsApps.vcxproj
+++ b/LogisticsApps/LogisticsApps.vcxproj
@@ -111,6 +111,35 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <Reference Include="System" />
+    <Reference Include="System.Data" />
+    <Reference Include="System.Drawing" />
+    <Reference Include="System.Windows.Forms" />
+    <Reference Include="System.Xml" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClCompile Include="AdminWindow.cpp" />
+    <ClCompile Include="ClientWindow.cpp" />
+    <ClCompile Include="DistanceTable.cpp" />
+    <ClCompile Include="LoginWindow.cpp" />
+    <ClCompile Include="StartWindow.cpp" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="AdminWindow.h">
+      <FileType>CppForm</FileType>
+    </ClInclude>
+    <ClInclude Include="ClientWindow.h">
+      <FileType>CppForm</FileType>
+    </ClInclude>
+    <ClInclude Include="DistanceTable.h">
+      <FileType>CppForm</FileType>
+    </ClInclude>
+    <ClInclude Include="LoginWindow.h">
+      <FileType>CppForm</FileType>
+    </ClInclude>
+    <ClInclude Include="StartWindow.h">
+      <FileType>CppForm</FileType>
+    </ClInclude>
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
