--- a/LogisticsApps/LogisticsApps.vcxproj.filters
+++ b/LogisticsApps/LogisticsApps.vcxproj.filters
@@ -47,5 +47,8 @@
     <ClInclude Include="StartWindow.h">
       <Filter>Файлы заголовков</Filter>
     </ClInclude>
+    <ClInclude Include="UITheme.h">
+      <Filter>Файлы ресурсов</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
