Почти рабочая бд

--- a/LogisticsApps/LogisticsApps.vcxproj
+++ b/LogisticsApps/LogisticsApps.vcxproj
@@ -123,6 +123,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="AdminWindow.cpp" />
+    <ClCompile Include="AppStorage.cpp" />
     <ClCompile Include="ClientWindow.cpp" />
     <ClCompile Include="DistanceTable.cpp" />
     <ClCompile Include="LoginWindow.cpp" />
@@ -130,6 +131,9 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="AdminWindow.h">
+      <FileType>CppForm</FileType>
+    </ClInclude>
+    <ClInclude Include="AppStorage.h">
       <FileType>CppForm</FileType>
     </ClInclude>
     <ClInclude Include="ClientWindow.h">
@@ -147,6 +151,9 @@
     <ClInclude Include="UITheme.h" />
   </ItemGroup>
   <ItemGroup>
+    <EmbeddedResource Include="ClientWindow.resx">
+      <DependentUpon>ClientWindow.h</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="StartWindow.resx">
       <DependentUpon>StartWindow.h</DependentUpon>
     </EmbeddedResource>
